--- a/landing.css
+++ b/landing.css
@@ -7,7 +7,7 @@ body {
   background: black;
 }
 /*CSS below is initial landing animations*/
-.first-landing {
+ /* .first-landing {
   width: 100%;
   height: 100%;
   background-image: url(./Images/Homepage-Image.png);
@@ -49,19 +49,32 @@ body {
 }
 .wrapper {
   animation-delay: 5s;
-}
+  background-color: white;
+  height: 100%;
+  width: 100%;
+}   */
 /*CSS above is initial landing animation*/
+
 header {
   background-color: black;
   width: 100%;
-  height: 150px;
+  height: 162px;
   color: white;
+  position: fixed;
 }
 #mbc-logo {
   float: left;
+  width: 25%;
 }
 main {
+  background-color: white;
   color: white;
   font-size: 16px;
   line-height: 1.5;
+}
+nav {
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
