--- a/about.css
+++ b/about.css
@@ -7,23 +7,37 @@
 }
 body {
   background-color: rgb(3, 103, 56);
-  padding: 40px 80px;
+  padding: 0px 85px 0px 85px;
+  position: relative;
+}
+.backbutton {
+  position: absolute;
+  left: 24px;
+  top: 50vh;
+  color: white;
+  font-size: 40px;
+}
+a {
+  color: white;
+}
+a:hover {
+  color: white;
 }
 .content {
   background-color: rgb(254, 254, 254);
-  border-radius: 15px;
 }
 .wrapper {
   width: 100%;
   height: 50%;
   display: flex;
-  padding: 25px;  
+  padding: .8%;  
 }
 .text-wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 8% 30px 8%;
+  padding: 0 8% 0px 8%;
+  justify-content: space-between;
 }
 h2 {
   margin-bottom: 3px;
@@ -32,48 +46,67 @@ h2 {
   line-height: 32px;
   color: rgb(138, 94, 56);
   text-align: center;
+  margin-top: 16px;
+  margin-bottom: 8px;
+  font-weight: 100;
+  font-size: 45px;
 }
-.text-wrap div {
+.text-wrap div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.text-wrap div:nth-child(2) {
   width: 150px;
   height: 2px;
   background-color: black;
 }
-p {
-  margin-bottom: 8px;
+ul {
+  margin-bottom: 0px;
   line-height: 1.5;
 }
 button {
   font-size: 13px;
   height: 45px;
   width: 120px;
+  margin-bottom: 20px;
   border-radius: 50px;
   border: 1px solid rgb(3, 103, 56);
   background-color: rgb(254, 254, 954);
   text-transform: uppercase;
   font-weight: 100;
   color: black;
+  outline: none;
+  
 }
 button:hover {
   background-color: rgb(3, 103, 56);
   color: white;
-  transform: scale(1.08);
+  transform: scale(1.1);
   box-shadow: 3px 3px 3px cadetblue;
   border: none;
+  font-size: 14px;
+}
+button:active {
+  background-color: rgb(12, 128, 74);
+  transform: scale(1);
+  box-shadow: none;
+  outline: none;
 }
 .button1 {
-  margin-left: 0px;
+  margin-left: 350px;
+  margin-top: 
 }
 .button2 {
-  margin-right: 0px;
+  margin-right: 350px;
 }
 img {
-  width: 38%;
+  width: 40%;
   border-radius: 5px;
-  border: 3px solid rgb(3, 103, 56);
 }
 #image1 {
-  margin-left: 48px;
+  margin-left: 0px;
 }
 #image2 {
-  margin-right: 48px;
+  margin-right: ppx;
 }
