--- a/about.css
+++ b/about.css
@@ -6,7 +6,7 @@
   
 }
 body {
-  background-color: rgb(3, 103, 56);
+  background-color: #5E9862;
   padding: 0px 85px 0px 85px;
   position: relative;
 }
