--- a/landing.css
+++ b/landing.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background: black;
+  background: white;
 }
 /*CSS below is initial landing animations*/
  /* .first-landing {
@@ -53,28 +53,119 @@ body {
   height: 100%;
   width: 100%;
 }   */
-/*CSS above is initial landing animation*/
+/* above is landing animation. below is header/nav. */
 
 header {
-  background-color: black;
+  background-color: white;
   width: 100%;
-  height: 162px;
-  color: white;
-  position: fixed;
+  height: 125px;
+  overflow: hidden;
 }
 #mbc-logo {
   float: left;
-  width: 25%;
-}
-main {
-  background-color: white;
-  color: white;
-  font-size: 16px;
-  line-height: 1.5;
+  width: 20%;
+  min-width: 303px;
 }
 nav {
   height: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+/*Above is header/nav, below is main content area*/
+.maincontent {
+  background-image: url(./Images/outside.jpg);
+  background-position: center;
+  width: 100%;
+  height: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.maintext {
+  font-size: 2em;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  opacity: .85; 
+}
+#emphasis {
+  font-size: 5em;
+}
+/*Above is main content area, below*/
+
+.page-break-boxes {
+  background-color: white;
+  width: 100%;
+  height: 70px;
+  position: relative;
+  color: black;
+  display: flex;
+  justify-content: space-evenly;
+}
+.page-break-boxes div {
+  border: 1px solid black;
+  height: 150px;
+  position: relative;
+  bottom: 80px;
+  border-radius: 20px;
+  background-color: #A9735B;
+}
+.page-break-boxes div:nth-child(1) {
+  background-color: rgb(87, 87, 233);
+}
+.page-break-boxes div:nth-child(2) {
+  background-color: rgb(36, 173, 173);
+}
+.page-break-boxes div:nth-child(3) {
+  background-color: rgb(133, 228, 133);
+}
+/*Above is positioned divs, below is footer*/
+.footgrid {
+  display: grid;
+  grid-template-columns: 40% 25% auto;
+  grid-template-rows: 20% auto;
+}
+.border {
+  border: 2px solid blue;
+}
+.manager {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  width: 75%;
+  min-width: 329px;
+  margin: 56px 15% 56px 10%;
+}
+.managertitle {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 40px;
+  position: relative;
+  left: -40px;
+}
+.managerinfo {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  padding: 0% 10% 0% 10%;
+  line-height: 1.5;
+  font-size: 16px;
+  text-align: justify;
+  position: relative;
+  left: -40px;
+}
+form {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  display: flex;
+  flex-direction: column;
+}
+.formhead {
+  text-align: center;
+  margin-bottom: 24px;
+}
+input {
+  width: 200px;
 }
