--- a/floor.css
+++ b/floor.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Galdeano', sans-serif;
 }
 body {
   padding: 0px 1%;
@@ -13,6 +14,19 @@ img {
 }
 header {
   height: 20%;
+}
+.backbutton {
+  color: white;
+  font-size: 40px;
+  position: absolute;
+  top: 15px;
+  left: 50vw;
+}
+a:visited {
+  color: white;
+}
+a:active {
+  color: white;
 }
 main {
   float: left;
