--- a/about.css
+++ b/about.css
@@ -25,19 +25,23 @@ a:hover {
 }
 .content {
   background-color: rgb(254, 254, 254);
+  border: 2px solid blue;
 }
 .wrapper {
   width: 100%;
   height: 50%;
   display: flex;
   padding: .8%;  
+  border: 2px solid orange;
 }
 .text-wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 8% 0px 8%;
+  padding: 0px 7% 0px 7%;
   justify-content: space-between;
+  width: 50%;
+  border: 2px solid yellow;
 }
 h2 {
   margin-bottom: 3px;
@@ -77,7 +81,6 @@ button {
   font-weight: 100;
   color: black;
   outline: none;
-  
 }
 button:hover {
   background-color: rgb(3, 103, 56);
@@ -95,18 +98,49 @@ button:active {
 }
 .button1 {
   margin-left: 350px;
-  margin-top: 
 }
 .button2 {
   margin-right: 350px;
 }
 img {
-  width: 40%;
+  width: 526px;
+  height: 324px;
   border-radius: 5px;
+  border: 2px solid blue;
 }
 #image1 {
   margin-left: 0px;
 }
 #image2 {
-  margin-right: ppx;
+  margin-right: 0px;
+}
+.border {
+  border: 2px solid blue;
+}
+@media (max-width: 1260px){
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;    
+  }
+  .body {
+    display: flex;
+    justify-content: center;
+  }
+  .content {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .wrapper {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .text-wrap {
+    display: block;
+  }
 }
