--- a/landing2.css
+++ b/landing2.css
@@ -69,7 +69,31 @@ img {
 #section-a .social {
   display: flex;
 }
-
+#section-a .heading .links {
+  display: flex;
+  justify-content: space-evenly;
+}
+#section-a .heading .links a {
+  color: var(--lightbrown);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: .75em;
+  font-weight: 900;
+  margin: 1em 0px;
+  border: 1px solid var(--brown);
+  padding: .5em;
+  border-radius: 50px;
+}
+#section-a .heading .links a:hover {
+  color: white;
+  background: var(--brown);
+  transform: translateY(-4px);
+  box-shadow: 0px 3px 0px 0px var(--lightbrown);
+}
+#section-a .heading .links a:active {
+  transform: translateY(0px);
+  box-shadow: none;
+}
 
 /* End Section A / Start Section B */
 
@@ -136,4 +160,46 @@ img {
   width: 100%;
   height: 2px;
   background: var(--brown);
+}
+#section-d .form-wrap {
+  display: flex;
+  flex-direction: column;
+  background: var(--brown);
+  padding: .4em;
+}
+#section-d label {
+  text-align: left;
+  color: white;
+  opacity: .8;
+}
+#section-d input {
+  width: 225px;
+  height: 25px;
+  margin-bottom: 1em;
+}
+.form-wrap .button {
+  width: 100px;
+  margin-top: .5em;
+}
+#section-d .form-wrap #submit {
+  display: inline-block;
+  border-radius: 50px;
+  border: 1px solid white;
+  background: var(--lightbrown);
+  font-size: .75em;
+  margin-top: .5em;
+  text-transform: uppercase;
+  font-size: 13px;
+  color: black;
+  width: 80px;
+}
+
+#section-d .form-wrap #submit:hover {
+  transform: scale(1.08);
+  box-shadow: 0px 1px 0px;
+}
+#section-d .form-wrap #submit:active {
+  transform: scale(1);
+  box-shadow: none;
+  outline: none;
 }
