--- a/landing2.css
+++ b/landing2.css
@@ -52,22 +52,36 @@ img {
 }
 
 /* End Core Styles / Start Section A */
+.mbc-logo {}
 
 #section-a .contacts {
   width: 100%;
   height: 80px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
+}
+#section-a .contacts h4:first-child {
+  display: none;
 }
 #section-a .phone-email {
   padding: 0px;
-  display: flex;
+  display: none;
 }
 #section-a .phone-email p {
-  padding: 0px;
+  display: none;
 }
-#section-a .social {
+#section-a .social1 {
   display: flex;
+}
+#section-a .social1 {
+  font-size: 2em;
+}
+#section-a .social1 a {
+  color: black;
+}
+#section-a .social1 a:hover {
+  transform: scale(1.1);
 }
 #section-a .heading .links {
   display: flex;
@@ -167,6 +181,12 @@ img {
   background: var(--brown);
   padding: .4em;
 }
+#section-d h3 {
+  color: white;
+  opacity: .8;
+  padding: 0px;
+  background: var(--lightbrown)
+}
 #section-d label {
   text-align: left;
   color: white;
@@ -175,7 +195,6 @@ img {
 #section-d input {
   width: 225px;
   height: 25px;
-  margin-bottom: 1em;
 }
 .form-wrap .button {
   width: 100px;
@@ -202,4 +221,16 @@ img {
   transform: scale(1);
   box-shadow: none;
   outline: none;
+}
+
+/* End Section D / Start Section E*/
+
+#section-e {
+  text-align: center;
+  padding: 0px 0px 1em;
+  margin: 0;
+}
+#section-e p {
+  padding: 0px;
+  margin: 0px;
 }
