--- a/about.css
+++ b/about.css
@@ -3,144 +3,20 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Cabin', sans-serif;
-  
 }
-body {
-  background-color: #5E9862;
-  padding: 0px 85px 0px 85px;
-  position: relative;
+header {
+  height: 75px;
 }
 .backbutton {
-  position: absolute;
-  left: 24px;
-  top: 50vh;
   color: white;
   font-size: 40px;
+  position: absolute;
+  top: 15px;
+  left: 49vw;
 }
-a {
+a:visited {
   color: white;
 }
-a:hover {
+a:active {
   color: white;
-}
-.content {
-  background-color: rgb(254, 254, 254);
-  border: 2px solid blue;
-}
-.wrapper {
-  width: 100%;
-  height: 50%;
-  display: flex;
-  padding: .8%;  
-  border: 2px solid orange;
-}
-.text-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0px 7% 0px 7%;
-  justify-content: space-between;
-  width: 50%;
-  border: 2px solid yellow;
-}
-h2 {
-  margin-bottom: 3px;
-  text-transform: uppercase;
-  letter-spacing: 3.5px;
-  line-height: 32px;
-  color: rgb(138, 94, 56);
-  text-align: center;
-  margin-top: 16px;
-  margin-bottom: 8px;
-  font-weight: 100;
-  font-size: 45px;
-}
-.text-wrap div:nth-child(1) {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.text-wrap div:nth-child(2) {
-  width: 150px;
-  height: 2px;
-  background-color: black;
-}
-ul {
-  margin-bottom: 0px;
-  line-height: 1.5;
-}
-button {
-  font-size: 13px;
-  height: 45px;
-  width: 120px;
-  margin-bottom: 20px;
-  border-radius: 50px;
-  border: 1px solid rgb(3, 103, 56);
-  background-color: rgb(254, 254, 954);
-  text-transform: uppercase;
-  font-weight: 100;
-  color: black;
-  outline: none;
-}
-button:hover {
-  background-color: rgb(3, 103, 56);
-  color: white;
-  transform: scale(1.1);
-  box-shadow: 3px 3px 3px cadetblue;
-  border: none;
-  font-size: 14px;
-}
-button:active {
-  background-color: rgb(12, 128, 74);
-  transform: scale(1);
-  box-shadow: none;
-  outline: none;
-}
-.button1 {
-  margin-left: 350px;
-}
-.button2 {
-  margin-right: 350px;
-}
-img {
-  width: 526px;
-  height: 324px;
-  border-radius: 5px;
-  border: 2px solid blue;
-}
-#image1 {
-  margin-left: 0px;
-}
-#image2 {
-  margin-right: 0px;
-}
-.border {
-  border: 2px solid blue;
-}
-@media (max-width: 1260px){
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;    
-  }
-  .body {
-    display: flex;
-    justify-content: center;
-  }
-  .content {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  .wrapper {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .text-wrap {
-    display: block;
-  }
 }
