--- a/landing.css
+++ b/landing.css
@@ -15,7 +15,7 @@ body {
 --lightbrown: rgba(191, 132, 111, 1); 
 }
 /*CSS below is initial landing animations*/
-/*
+
   .first-landing {
   width: 100%;
   height: 100%;
@@ -61,7 +61,7 @@ body {
   background-color: white;
   height: 100%;
   width: 100%;
-} */
+}
 
 /* above is landing animation. below is header/nav. */
 
