--- a/landing2.css
+++ b/landing2.css
@@ -1,4 +1,53 @@
-/* Core Styles*/
+/*Below is Animation*/
+
+.first-landing {
+  width: 100%;
+  height: 100%;
+  background-image: url(./Images/Homepage-Image.png);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-position: center;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation-delay: 4.5s;
+}
+.first-landing h1 {
+  font-family: 'Lobster', cursive;
+  color: white;
+  font-size: 65px;
+  font-weight: 200;
+  animation-delay: 1s;
+}
+.first-landing span {
+  animation-delay: 1.25s;
+  font-size: 20px;
+}
+.first-landing h2 {
+  text-align: center;
+  font-family: 'IM Fell English SC', serif;
+  animation-delay: 1.7s;
+  font-size: 70px;
+  color: white;
+}
+.first-landing h2 span {
+  display: block;
+  animation-delay: 2s;
+  font-size: 70px;
+  color: white;
+  position: relative;
+  bottom: 25px;
+}
+.wrapper {
+  animation-delay: 5s;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+}
+
+/*Above is Animation / Below is Core Styles*/
 * {
   margin: 0;
   padding: 0;
